@startuml

title __MODEL's Class Diagram__\n

  namespace de.shimunmatic.informationhub {
    namespace model {
      class de.shimunmatic.informationhub.model.BaseEntity {
          # dateCreated : Instant
          # dateDeleted : Instant
          # dateUpdated : Instant
          # deleted : Boolean
          # id : Long
          + BaseEntity()
          + BaseEntity()
          + equals()
          + getDateCreated()
          + getDateDeleted()
          + getDateUpdated()
          + getDeleted()
          + getId()
          + hashCode()
          + setDateCreated()
          + setDateDeleted()
          + setDateUpdated()
          + setDeleted()
          + setId()
          + toString()
          # canEqual()
          - setDateCreated()
          - setDateDeleted()
          - setDateUpdated()
      }
    }
  }
  

  namespace de.shimunmatic.informationhub {
    namespace model {
      class de.shimunmatic.informationhub.model.CountryState {
          - confirmedCases : Integer
          - countryName : String
          - deathCases : Integer
          - lastUpdated : Instant
          - latitude : Double
          - longitude : Double
          - recoveredCases : Integer
          - stateName : String
          + CountryState()
          + CountryState()
          {static} + builder()
          + equals()
          + getConfirmedCases()
          + getCountryName()
          + getDeathCases()
          + getLastUpdated()
          + getLatitude()
          + getLongitude()
          + getProcessedDate()
          + getRecoveredCases()
          + getStateName()
          + hashCode()
          + setConfirmedCases()
          + setCountryName()
          + setDeathCases()
          + setLastUpdated()
          + setLatitude()
          + setLongitude()
          + setProcessedDate()
          + setRecoveredCases()
          + setStateName()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace de.shimunmatic.informationhub {
    namespace model {
      class de.shimunmatic.informationhub.model.CountryState.CountryStateBuilder {
          - confirmedCases : Integer
          - countryName : String
          - deathCases : Integer
          - lastUpdated : Instant
          - latitude : Double
          - longitude : Double
          - recoveredCases : Integer
          - stateName : String
          + build()
          + confirmedCases()
          + countryName()
          + deathCases()
          + lastUpdated()
          + latitude()
          + longitude()
          + processedDate()
          + recoveredCases()
          + stateName()
          + toString()
          ~ CountryStateBuilder()
      }
    }
  }
  

  namespace de.shimunmatic.informationhub {
    namespace model {
      class de.shimunmatic.informationhub.model.ProcessedDate {
          - processedDate : Instant
          - processedDateFormatted : String
          + ProcessedDate()
          + ProcessedDate()
          {static} + builder()
          + equals()
          + getProcessedDate()
          + getProcessedDateFormatted()
          + hashCode()
          + setProcessedDate()
          + setProcessedDateFormatted()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace de.shimunmatic.informationhub {
    namespace model {
      class de.shimunmatic.informationhub.model.ProcessedDate.ProcessedDateBuilder {
          - processedDate : Instant
          - processedDateFormatted : String
          + build()
          + processedDate()
          + processedDateFormatted()
          + toString()
          ~ ProcessedDateBuilder()
      }
    }
  }
  

  de.shimunmatic.informationhub.model.CountryState -up-|> de.shimunmatic.informationhub.model.BaseEntity
  de.shimunmatic.informationhub.model.CountryState o-- de.shimunmatic.informationhub.model.ProcessedDate : processedDate
  de.shimunmatic.informationhub.model.CountryState +-down- de.shimunmatic.informationhub.model.CountryState.CountryStateBuilder
  de.shimunmatic.informationhub.model.CountryState.CountryStateBuilder o-- de.shimunmatic.informationhub.model.ProcessedDate : processedDate
  de.shimunmatic.informationhub.model.ProcessedDate -up-|> de.shimunmatic.informationhub.model.BaseEntity
  de.shimunmatic.informationhub.model.ProcessedDate +-down- de.shimunmatic.informationhub.model.ProcessedDate.ProcessedDateBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
